@@ -1,3 +1,6 @@
+[B]4.0.2[/B]
+- fixed: changed USA to United States in settings due to IMDb changes
+
 [B]4.0.1[/B]
 - fixed: tmdb uniqueids fix
 
